--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -1,5 +1,11 @@
 @import "utils";
 
+@media (min-width: 1200px) {
+  .container {
+    width: 980px;
+  }
+}
+
 html {
 }
 
@@ -41,6 +47,10 @@ body {
 .navbar-form {
   width: 300px;
   margin: 10px 0;
+}
+
+.navbar {
+  margin-bottom: 0;
 }
 
 #footer {
