--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -3,13 +3,15 @@
 {% block page_id %}page-index{% endblock %}
 {% block page_title %}Flask-Bootstrap{% endblock %}
 {% block page_css %}
-   {{ link('css/site/index.css') }}
+{{ link('css/site/index.css') }}
 {% endblock %}
 
 {% block page_content %}
+<div class="jumbotron">
    <div class="container">
-      <h1>Flask-Boostrap</h1>
+      <h1>TUI Studio</h1>
 
-      <p>Flask project for bootstrap.</p>
+      <p>TUI Studio is a passionate team focusing on Web Development.</p>
    </div>
+</div>
 {% endblock %}
