--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -23,27 +23,25 @@
 
 {# Flash message #}
 {% with message = get_flashed_messages()[0] %}
-   {% if message %}
-      <div class="alert alert-info flash-message">{{ message }}</div>
-   {% endif %}
+{% if message %}
+<div class="alert alert-info flash-message">{{ message }}</div>
+{% endif %}
 {% endwith %}
 
 <nav class="navbar navbar-default navbar-static-top">
    <div class="container">
       <div class="navbar-header">
          <a class="navbar-brand" href="{{ url_for('site.index') }}">
-            Flask-Bootstrap
+            TUI Studio
          </a>
       </div>
 
       <div class="collapse navbar-collapse">
          <ul class="nav navbar-nav">
-            <li id="nav-index">
-               <a href="{{ url_for('site.index') }}">首页</a>
-            </li>
-            <li id="nav-about">
-               <a href="{{ url_for('site.about') }}">关于</a>
-            </li>
+            <li class="active"><a href="#">Team</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Hire</a></li>
          </ul>
 
          <form class="navbar-form navbar-left" role="search" method="get" action="#">
@@ -60,19 +58,19 @@
 
          <ul class="nav navbar-nav navbar-right">
             {% if g.user %}
-               <li id="nav-settings">
-                  <a href="#">{{ g.user.name }}</a>
-               </li>
-               <li>
-                  <a href="#">登出</a>
-               </li>
+            <li id="nav-settings">
+               <a href="#">{{ g.user.name }}</a>
+            </li>
+            <li>
+               <a href="#">登出</a>
+            </li>
             {% else %}
-               <li id="nav-signin">
-                  <a href="#">登录</a>
-               </li>
-               <li id="nav-signup">
-                  <a href="#">注册</a>
-               </li>
+            <li id="nav-signin">
+               <a href="#">登录</a>
+            </li>
+            <li id="nav-signup">
+               <a href="#">注册</a>
+            </li>
             {% endif %}
          </ul>
       </div>
