--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -28,7 +28,7 @@
 {% endif %}
 {% endwith %}
 
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-inverse navbar-static-top">
    <div class="container">
       <div class="navbar-header">
          <a class="navbar-brand" href="{{ url_for('site.index') }}">
@@ -37,26 +37,23 @@
       </div>
 
       <div class="collapse navbar-collapse">
-         <ul class="nav navbar-nav">
+         <!--<form class="navbar-form navbar-left" role="search" method="get" action="#">-->
+            <!--<div class="input-group">-->
+               <!--<input type="text" name="keyword" class="form-control input-sm"-->
+                      <!--placeholder="">-->
+               <!--<span class="input-group-btn">-->
+                  <!--<button class="btn btn-default btn-sm" type="submit">-->
+                     <!--<span class="fa fa-search"></span>-->
+                  <!--</button>-->
+               <!--</span>-->
+            <!--</div>-->
+         <!--</form>-->
+
+         <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Team</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">Hire</a></li>
-         </ul>
-
-         <form class="navbar-form navbar-left" role="search" method="get" action="#">
-            <div class="input-group">
-               <input type="text" name="keyword" class="form-control input-sm"
-                      placeholder="">
-               <span class="input-group-btn">
-                  <button class="btn btn-default btn-sm" type="submit">
-                     <span class="fa fa-search"></span>
-                  </button>
-               </span>
-            </div>
-         </form>
-
-         <ul class="nav navbar-nav navbar-right">
             {% if g.user %}
             <li id="nav-settings">
                <a href="#">{{ g.user.name }}</a>
