--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -44,13 +44,15 @@ body {
   }
 }
 
-.navbar-form {
-  width: 300px;
-  margin: 10px 0;
-}
-
 .navbar {
   margin-bottom: 0;
+  background-color: white;
+  border-bottom: 1px solid #dddddd;
+  box-shadow: 0 0 5px rgba(0, 0, 0, .2);
+
+  .navbar-nav.navbar-right:last-child {
+    margin-right: 10px;
+  }
 }
 
 #footer {
