--- a/tuistudio/templates/site/about.html
+++ b/tuistudio/templates/site/about.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block page_id %}page-index{% endblock %}
-{% block page_title %}关于Flask-Bootstrap{% endblock %}
+{% block page_title %}About TUI Studio{% endblock %}
 {% block page_css %}
    {{ link('css/site/about.css') }}
 {% endblock %}
