--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -23,12 +23,12 @@
 
 {# Flash message #}
 {% with message = get_flashed_messages()[0] %}
-{% if message %}
-<div class="alert alert-info flash-message">{{ message }}</div>
-{% endif %}
+   {% if message %}
+      <div class="alert alert-info flash-message">{{ message }}</div>
+   {% endif %}
 {% endwith %}
 
-<nav class="navbar navbar-inverse navbar-static-top">
+<nav class="navbar navbar-static-top">
    <div class="container">
       <div class="navbar-header">
          <a class="navbar-brand" href="{{ url_for('site.index') }}">
@@ -37,30 +37,21 @@
       </div>
 
       <div class="collapse navbar-collapse">
-         <!--<form class="navbar-form navbar-left" role="search" method="get" action="#">-->
-         <!--<div class="input-group">-->
-         <!--<input type="text" name="keyword" class="form-control input-sm"-->
-         <!--placeholder="">-->
-         <!--<span class="input-group-btn">-->
-         <!--<button class="btn btn-default btn-sm" type="submit">-->
-         <!--<span class="fa fa-search"></span>-->
-         <!--</button>-->
-         <!--</span>-->
-         <!--</div>-->
-         <!--</form>-->
+         <a href="{{ url_for('site.business') }}" class="btn navbar-btn btn-primary navbar-right">
+            <span class="fa fa-paper-plane"></span>&nbsp;&nbsp;Start Your Project
+         </a>
 
          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Works</a></li>
+            <li><a href="#">Service</a></li>
             <li class="active"><a href="#">Team</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Hire</a></li>
             {% if g.user %}
-            <li id="nav-settings">
-               <a href="#">{{ g.user.name }}</a>
-            </li>
-            <li>
-               <a href="#">登出</a>
-            </li>
+               <li id="nav-settings">
+                  <a href="#">{{ g.user.name }}</a>
+               </li>
+               <li>
+                  <a href="#">登出</a>
+               </li>
             {% endif %}
          </ul>
       </div>
