--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -1,17 +1,77 @@
 {% extends "layout.html" %}
 
 {% block page_id %}page-index{% endblock %}
-{% block page_title %}Flask-Bootstrap{% endblock %}
+{% block page_title %}TUI Studio{% endblock %}
 {% block page_css %}
-{{ link('css/site/index.css') }}
+   {{ link('css/site/index.css') }}
 {% endblock %}
 
 {% block page_content %}
-<div class="jumbotron">
-   <div class="container">
-      <h1>TUI Studio</h1>
+   <div class="jumbotron">
+      <div class="container">
+         <h1 class="text-center">Boost Your Business With US</h1>
 
-      <p>TUI Studio is a passionate team focusing on Web Development.</p>
+         <p class="text-center">TUI Studio is a passionate team focusing on Web Development.</p>
+      </div>
    </div>
-</div>
+
+   <div class="container">
+      <h1 class="title">Our Works</h1>
+
+      <div class="row clearfix">
+         <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+               <img src="http://placehold.it/350x250" alt="">
+
+               <div class="caption">
+                  <h3>Optico</h3>
+
+                  <p>We help Optico Communication to build their websites.</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+               <img src="http://placehold.it/350x250" alt="">
+
+               <div class="caption">
+                  <h3>LeMaker</h3>
+
+                  <p>We help LeMaker 3D Printing Company to build their websites.</p>
+               </div>
+            </div>
+         </div>
+
+         <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+               <img src="http://placehold.it/350x250" alt="">
+
+               <div class="caption">
+                  <h3>AOD</h3>
+
+                  <p>We help AOD 3D Printing Company to build their websites.</p>
+               </div>
+            </div>
+         </div>
+
+         <a href="#" class="btn btn-default">
+            更多
+         </a>
+      </div>
+   </div>
+
+   <div>
+      <div class="container">
+         <h1 class="title">Service</h1>
+      </div>
+
+   </div>
+
+   <div>
+      <div class="container">
+         <h1 class="title">Team</h1>
+      </div>
+
+   </div>
 {% endblock %}
