--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -10,7 +10,7 @@
    <div class="container">
       <div class="row">
          <div class="col-sm-6 col-sm-offset-3">
-            <h1 class="text-center">Start Your Business</h1>
+            <h1 class="text-center">Start Your Project</h1>
 
             <form role="form" method="post">
                <div class="form-group">
