--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -54,10 +54,6 @@
                </div>
             </div>
          </div>
-
-         <a href="#" class="btn btn-default">
-            更多
-         </a>
       </div>
    </div>
 
@@ -71,7 +67,29 @@
    <div>
       <div class="container">
          <h1 class="title">Team</h1>
+
+         <div class="row clearfix">
+            <div class="col-sm-6 col-md-4 member">
+               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>
+
+               <p>Huajian Zhang</p>
+            </div>
+
+            <div class="col-sm-6 col-md-4 member">
+               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>
+
+               <p>Zhipeng Liu</p>
+            </div>
+
+            <div class="col-sm-6 col-md-4 member">
+               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>
+
+               <p>Jian Zhao</p>
+            </div>
+         </div>
+
       </div>
+
 
    </div>
 {% endblock %}
