--- a/tuistudio/static/css/common.less
+++ b/tuistudio/static/css/common.less
@@ -5,6 +5,14 @@
   color: red;
 }
 
+.text-main {
+  color: @main-color;
+}
+
+.text-black {
+  color: #333333;
+}
+
 .text-light {
   color: gray;
 }
