--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -32,7 +32,7 @@
    <div class="container">
       <div class="navbar-header">
          <a class="navbar-brand" href="{{ url_for('site.index') }}">
-            TUI Studio
+            <span class="text-main">TUI</span> <span class="text-black">Studio</span>
          </a>
       </div>
 
