--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -12,9 +12,17 @@ html {
 body {
 }
 
+a {
+  color: #333333;
+
+  &:hover {
+    color: @main-color;
+  }
+}
+
 // Flash消息
 .flash-message {
-  background-color: @blue;
+  background-color: @main-color;
   border: 0;
   color: #ffffff;
   margin-bottom: 0;
@@ -49,8 +57,27 @@ body {
   background-color: white;
   border-bottom: 1px solid #dddddd;
 
+  .navbar-brand {
+    display: inline-block;
+    padding-top: 30px;
+    padding-bottom: 20px;
+  }
+
+  .navbar-nav > li > a {
+    padding: 30px 20px;
+
+    &:hover {
+      background-color: transparent;
+    }
+  }
+
+  .navbar-btn {
+    margin-top: 23px;
+    padding: 7px 12px;
+  }
+
   .navbar-nav.navbar-right:last-child {
-    margin-right: 10px;
+    margin-right: 20px;
   }
 }
 
