--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -1,10 +1,70 @@
 #page-index {
+  .navbar {
+    box-shadow: 0 0 5px rgba(0, 0, 0, .1);
+  }
+  .slogan {
+    padding: 90px 0;
+    background: url('/static/image/triangles.png') repeat;
+    border-bottom: 1px solid #EEEEEE;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .1);
+
+    h1 {
+      font-size: 65px;
+      font-weight: normal;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 20px;
+      color: #666;
+    }
+  }
 
   .title {
+    font-size: 30px;
+    font-weight: normal;
     text-align: center;
+    margin: 50px 0;
   }
 
   .member {
     text-align: center;
   }
+
+  .works {
+    text-align: center;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #dddddd;
+
+    .title {
+      margin-bottom: 20px;
+    }
+
+    img {
+      display: inline-block;
+      height: 47px;
+
+      &.aod {
+        height: 42px;
+        margin-right: 100px;
+      }
+
+      &.lemaker {
+        margin-right: 80px;
+      }
+
+      &.optico {
+        height: 70px;
+      }
+    }
+  }
+}
+
+.work.aod {
+}
+
+.work.lemaker {
+}
+
+.work.optico {
 }
