--- a/tuistudio/static/css/utils.less
+++ b/tuistudio/static/css/utils.less
@@ -1,7 +1,7 @@
 // 颜色
-@dark-blue: darken(#3fa7cb, 20%);
-@blue: #3fa7cb;
-@light-blue: lighten(#3fa7cb, 40%);
+@dark-main: darken(#36a9e5, 20%);
+@main-color: #36a9e5;
+@light-main: lighten(#36a9e5, 40%);
 
 // 圆角
 .border-radius( @radius:5px ) {
