--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -61,10 +61,12 @@ a {
     display: inline-block;
     padding-top: 30px;
     padding-bottom: 20px;
+    font-size: 22px;
   }
 
   .navbar-nav > li > a {
     padding: 30px 20px;
+    font-size: 16px;
 
     &:hover {
       background-color: transparent;
@@ -81,5 +83,16 @@ a {
   }
 }
 
-#footer {
+.footer {
+  padding: 30px 0;
+  margin-top: 80px;
+  border-top: 1px solid #dddddd;
+
+  .cp {
+    float: left;
+  }
+
+  .slogan {
+    float: right;
+  }
 }
