--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -2,11 +2,11 @@
   .navbar {
     box-shadow: 0 0 5px rgba(0, 0, 0, .1);
   }
-  .slogan {
-    padding: 90px 0;
+
+  .market {
+    padding: 120px 0 120px 0;
     background: url('/static/image/triangles.png') repeat;
     border-bottom: 1px solid #EEEEEE;
-    box-shadow: 0 0 5px rgba(0, 0, 0, .1);
 
     h1 {
       font-size: 65px;
@@ -15,7 +15,7 @@
     }
 
     p {
-      font-size: 20px;
+      font-size: 22px;
       color: #666;
     }
   }
