--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -63,7 +63,10 @@
 </div>
 
 <div class="footer">
-
+   <div class="container">
+      <div class="cp">2014 © TUI Studio</div>
+      <div class="slogan"><span class="text-main">TUI</span> Studio</div>
+   </div>
 </div>
 
 {# 访问统计 #}
