--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block page_content %}
-   <div class="slogan">
+   <div class="market">
       <div class="container">
          <h1 class="text-center">Boost Your Business With US</h1>
 
