--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -44,9 +44,11 @@ a:hover {
   display: inline-block;
   padding-top: 30px;
   padding-bottom: 20px;
+  font-size: 22px;
 }
 .navbar .navbar-nav > li > a {
   padding: 30px 20px;
+  font-size: 16px;
 }
 .navbar .navbar-nav > li > a:hover {
   background-color: transparent;
@@ -57,4 +59,15 @@ a:hover {
 }
 .navbar .navbar-nav.navbar-right:last-child {
   margin-right: 20px;
+}
+.footer {
+  padding: 30px 0;
+  margin-top: 80px;
+  border-top: 1px solid #dddddd;
+}
+.footer .cp {
+  float: left;
+}
+.footer .slogan {
+  float: right;
 }
