--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -11,7 +11,7 @@
       <div class="container">
          <h1 class="text-center">Boost Your Business With US</h1>
 
-         <p class="text-center">TUI Studio is a passionate team focusing on Web Development.</p>
+         <p class="text-center">TUI Studio is a passionate team focusing on Web solutions.</p>
       </div>
    </div>
 
