--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -19,9 +19,9 @@
       <h1 class="title">Our Works</h1>
 
       <div class="row clearfix">
-         <img src="{{ static('image/aod_gray.png') }}" class="aod" alt=""/>
-         <img src="{{ static('image/lemaker_gray.png') }}" class="lemaker" alt=""/>
-         <img src="{{ static('image/optico_gray.png') }}" class="optico" alt=""/>
+         <img src="{{ static('image/aod_gray.png') }}" class="aod" alt="AOD"/>
+         <img src="{{ static('image/lemaker_gray.png') }}" class="lemaker" alt="LeMaker"/>
+         <img src="{{ static('image/optico_gray.png') }}" class="optico" alt="Optico"/>
       </div>
    </div>
 
@@ -53,32 +53,31 @@
       <div class="container">
          <h1 class="title">Service</h1>
       </div>
-
    </div>
 
-   <div>
-      <div class="container">
-         <h1 class="title">Team</h1>
-
-         <div class="row clearfix">
-            <div class="col-sm-6 col-md-4 member">
-               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>
-
-               <p>Huajian Zhang</p>
-            </div>
-
-            <div class="col-sm-6 col-md-4 member">
-               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>
-
-               <p>Zhipeng Liu</p>
-            </div>
-
-            <div class="col-sm-6 col-md-4 member">
-               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>
-
-               <p>Jian Zhao</p>
-            </div>
-         </div>
-      </div>
-   </div>
+   {#   <div>#}
+   {#      <div class="container">#}
+   {#         <h1 class="title">Team</h1>#}
+   {##}
+   {#         <div class="row clearfix">#}
+   {#            <div class="col-sm-6 col-md-4 member">#}
+   {#               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>#}
+   {##}
+   {#               <p>Huajian Zhang</p>#}
+   {#            </div>#}
+   {##}
+   {#            <div class="col-sm-6 col-md-4 member">#}
+   {#               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>#}
+   {##}
+   {#               <p>Zhipeng Liu</p>#}
+   {#            </div>#}
+   {##}
+   {#            <div class="col-sm-6 col-md-4 member">#}
+   {#               <img src="http://placehold.it/150x150" class="img-circle" alt=""/>#}
+   {##}
+   {#               <p>Jian Zhao</p>#}
+   {#            </div>#}
+   {#         </div>#}
+   {#      </div>#}
+   {#   </div>#}
 {% endblock %}
