--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -51,7 +51,7 @@
 
    <div>
       <div class="container">
-         <h1 class="title">Service</h1>
+         <h1 class="title">Services</h1>
       </div>
    </div>
 
