--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -43,8 +43,7 @@
 
          <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Works</a></li>
-            <li><a href="#">Service</a></li>
-            <li class="active"><a href="#">Team</a></li>
+            <li><a href="#">Services</a></li>
             {% if g.user %}
                <li id="nav-settings">
                   <a href="#">{{ g.user.name }}</a>
