add FancyBox support

--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -15,7 +15,7 @@
    {{ link('css/layout.css') }}
    {% block page_css %}{% endblock %}
    {{ script('bower_components/respond/dest/respond.min.js') }}
-   {{ script('bower_components/jquery/dist/jquery.min.js') }}
+   {{ script('bower_components/jquery/dist/jquery.js') }}
    {{ script('bower_components/bootstrap/dist/js/bootstrap.min.js') }}
 </head>
 
