--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -3,7 +3,12 @@
 {% block page_id %}page-business{% endblock %}
 {% block page_title %}Start Your Business{% endblock %}
 {% block page_css %}
+   {{ link('css/share/fancySelect.css') }}
    {{ link('css/site/business.css') }}
+{% endblock %}
+{% block page_js %}
+   {{ script('bower_components/fancyselect/fancySelect.js') }}
+   {{ script('js/site/business.js') }}
 {% endblock %}
 
 {% block page_content %}
@@ -17,15 +22,15 @@
                   <label for="bugget">Bugget</label>
                   <select class="form-control" name="bugget" id="bugget">
                      <option value="1">Less than $1000</option>
-                     <option>$1000-$2000</option>
-                     <option>$2000-5000</option>
+                     <option>$1000 ~ $2000</option>
+                     <option>$2000 ~ 5000</option>
                      <option>More than $5000</option>
                   </select>
                </div>
 
                <div class="form-group">
                   <label for="exampleInputPassword1">Period</label>
-                  <select class="form-control" name="bugget" id="bugget">
+                  <select class="form-control" name="period" id="period">
                      <option value="1">1 month</option>
                      <option>1 ~ 3 month</option>
                      <option>more than 3 month</option>
