--- a/tuistudio/static/css/share/fancySelect.css
+++ b/tuistudio/static/css/share/fancySelect.css
@@ -43,6 +43,7 @@ div.fancy-select div.trigger:after {
   border-top-color: #4B5468;
   top: 18px;
   right: 10px;
+  opacity: 0.5;
 }
 div.fancy-select div.trigger:hover,
 div.fancy-select div.trigger.open {
@@ -50,7 +51,7 @@ div.fancy-select div.trigger.open {
 }
 div.fancy-select div.trigger:hover:after,
 div.fancy-select div.trigger.open:after {
-  opacity: 0.5;
+  opacity: 1;
 }
 div.fancy-select ul.options {
   display: block;
@@ -64,7 +65,7 @@ div.fancy-select ul.options {
   background-color: #EEEEEE;
   visibility: hidden;
   opacity: 0;
-  z-index: 50;
+  z-index: 10000;
   overflow: auto;
   border-radius: 4px;
 }
@@ -85,6 +86,9 @@ div.fancy-select ul.options li {
   padding: 8px 12px;
   cursor: pointer;
   white-space: nowrap;
+}
+div.fancy-select ul.options li.selected {
+  background-color: #dddddd;
 }
 div.fancy-select ul.options li.hover {
   background-color: #dddddd;
