--- a/tuistudio/static/css/site/business.less
+++ b/tuistudio/static/css/site/business.less
@@ -1,3 +1,32 @@
-#page-business {
+@import "../utils";
 
+#page-business {
+  h1 {
+    margin: 40px 0 40px 0;
+  }
+
+  .form-group {
+    margin-bottom: 20px;
+  }
+
+  textarea {
+    resize: vertical;
+  }
+
+  .fancy-select {
+    width: 223px;
+    float: left;
+
+    * {
+      .transition(200ms);
+    }
+
+    &:first-child {
+      margin-right: 14px;
+    }
+  }
+
+  .btn-lg {
+    font-size: 16px;
+  }
 }
