--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -49,7 +49,7 @@
       </div>
    </div>
 
-   <div>
+   <div class="services">
       <div class="container">
          <h1 class="title">Services</h1>
       </div>
