--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -5,6 +5,9 @@
 {% block page_css %}
    {{ link('css/site/index.css') }}
 {% endblock %}
+{% block page_js %}
+   {{ script('js/site/index.js') }}
+{% endblock %}
 
 {% block page_content %}
    <div class="market">
