--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -43,8 +43,8 @@
          </a>
 
          <ul class="nav navbar-nav navbar-right">
-            <li id="nav-works"><a href="">Works</a></li>
-            <li id="nav-services"><a href="">Services</a></li>
+            <li id="nav-works"><a href="{{ url_for('site.index') }}#works">Works</a></li>
+            <li id="nav-services"><a href="{{ url_for('site.index') }}#services">Services</a></li>
             {% if g.user %}
                <li id="nav-settings">
                   <a href="#">{{ g.user.name }}</a>
