--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -29,7 +29,7 @@
    {% endif %}
 {% endwith %}
 
-<nav class="navbar navbar-static-top">
+<nav class="navbar navbar-fixed-top">
    <div class="container">
       <div class="navbar-header">
          <a class="navbar-brand" href="{{ url_for('site.index') }}">
