--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+  margin-top: 80px;
 }
 
 a {
@@ -54,32 +55,52 @@ a {
 
 .navbar {
   margin-bottom: 0;
-  background-color: white;
+  background-color: rgba(255, 255, 255, .85);
   border-bottom: 1px solid #dddddd;
 
-  .navbar-brand {
-    display: inline-block;
-    padding-top: 30px;
-    padding-bottom: 20px;
-    font-size: 22px;
-  }
+  // 下滑到一定高度，nav缩紧
+  &.condensed {
+    .navbar-header {
+      padding-top: 0;
+    }
 
-  .navbar-nav > li > a {
-    padding: 30px 20px;
-    font-size: 16px;
-
-    &:hover {
-      background-color: transparent;
+    .navbar-collapse {
+      padding-top: 2px;
+      padding-bottom: 2px;
     }
   }
 
-  .navbar-btn {
-    margin-top: 23px;
-    padding: 7px 12px;
+  .navbar-header {
+    padding-top: 15px;
+    .transition(200ms);
+
+    .navbar-brand {
+      display: inline-block;
+      padding-bottom: 20px;
+      font-size: 22px;
+    }
   }
 
-  .navbar-nav.navbar-right:last-child {
-    margin-right: 20px;
+  .navbar-collapse {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    .transition(200ms);
+
+    .navbar-nav > li > a {
+      padding: 15px 20px;
+      font-size: 16px;
+
+      &:hover {
+        background-color: transparent;
+      }
+    }
+
+    .navbar-btn {
+    }
+
+    .navbar-nav.navbar-right:last-child {
+      margin-right: 20px;
+    }
   }
 }
 
