--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -58,6 +58,12 @@
       </div>
    </div>
 
+   <div class="contact">
+      <div class="container">
+         <h1 class="title">Contact</h1>
+      </div>
+   </div>
+
    {#   <div>#}
    {#      <div class="container">#}
    {#         <h1 class="title">Team</h1>#}
