--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -105,16 +105,26 @@ a {
 }
 
 .footer {
-  padding: 30px 0;
+  padding: 20px 0;
   margin-top: 80px;
   border-top: 1px solid #dddddd;
+  font-size: 13px;
 
   .cp {
-    float: left;
+    float: right;
   }
 
-  .slogan {
-    float: right;
-    font-size: 18px;
+  .links {
+    float: left;
+
+    li {
+      padding-right: 10px;
+    }
+  }
+
+  .usa {
+    display: block;
+    height: 18px;
+    margin-left: 15px;
   }
 }
