--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -65,8 +65,18 @@
 
 <div class="footer">
    <div class="container">
-      <div class="cp">2014 © TUI Studio</div>
-      <div class="slogan"><span class="text-main">TUI</span> Studio</div>
+      <ul class="links list-unstyled list-inline">
+         <li><a href="#">About</a></li>
+         <li><a href="#">Blog</a></li>
+         <li><a href="#">Jobs</a></li>
+         <li><a href="#">Feedback</a></li>
+         <li><a href="#">Privacy</a></li>
+         <li><a href="#">Legal</a></li>
+      </ul>
+
+      <img class="usa pull-right" src="{{ static('image/usa.png') }}" alt="USA"/>
+
+      <div class="cp">2014 © <span class="text-main">TUI</span> Studio</div>
    </div>
 </div>
 
