--- a/tuistudio/static/css/bootstrap.theme.css
+++ b/tuistudio/static/css/bootstrap.theme.css
@@ -33,6 +33,9 @@ a {
   -ms-transition: all 100ms ease-out;
   -o-transition: all 100ms ease-out;
 }
+a:hover {
+  text-decoration: none;
+}
 .form-control {
   height: auto;
   border-radius: 4px;
