--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -43,6 +43,8 @@ a:hover {
   border-radius: 0;
   text-align: center;
   display: none;
+  padding: 26px;
+  font-size: 20px;
 }
 #page-search-students #nav-search-students a,
 #page-search-teachers #nav-search-teachers a,
