update footer style

--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -126,7 +126,8 @@ a {
 
   .usa {
     display: block;
-    height: 18px;
-    margin-left: 15px;
+    margin-left: 12px;
+    height: 14px;
+    margin-top: 2px;
   }
 }
