--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -119,6 +119,7 @@ a:hover {
 }
 .footer .usa {
   display: block;
-  height: 18px;
-  margin-left: 15px;
+  margin-left: 12px;
+  height: 14px;
+  margin-top: 2px;
 }
