--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -27,7 +27,7 @@
                      <select class="form-control" name="bugget" id="bugget">
                         <option>Less than $1000</option>
                         <option>$1000 ~ $2000</option>
-                        <option>$2000 ~ 5000</option>
+                        <option>$2000 ~ $5000</option>
                         <option>More than $5000</option>
                      </select>
 
