--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -116,11 +116,20 @@ a {
     float: right;
   }
 
-  .links {
+  .links-left {
     float: left;
 
     li {
       padding-right: 10px;
+    }
+  }
+
+  .links-right {
+    float: right;
+    margin-left: 10px;
+
+    li {
+
     }
   }
 
