--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -65,16 +65,23 @@
 
 <div class="footer">
    <div class="container">
-      <ul class="links list-unstyled list-inline">
-         <li><a href="#">About</a></li>
-         <li><a href="#">Blog</a></li>
-         <li><a href="#">Jobs</a></li>
-         <li><a href="#">Feedback</a></li>
-         <li><a href="#">Privacy</a></li>
-         <li><a href="#">Legal</a></li>
+      <ul class="links-left list-unstyled list-inline">
+         <li><a href="http://wiki.tuistudio.com" target="_blank">Wiki</a></li>
+         <li><a href="">Blog</a></li>
+         <li><a href="">Twitter</a></li>
+         <li><a href="https://github.com/tuistudio" target="_blank">Github</a></li>
+         <li><a href="">Collaboration</a></li>
+         <li><a href="">Jobs</a></li>
+         <li><a href="">Enterprise</a></li>
+         <li><a href="">Paterners</a></li>
       </ul>
 
       <img class="usa pull-right" src="{{ static('image/usa.png') }}" alt="USA"/>
+
+      <ul class="links-right list-inline list-unstyled">
+         <li><a href="">Privacy</a></li>
+         <li><a href="">Legal</a></li>
+      </ul>
 
       <div class="cp">2014 © <span class="text-main">TUI</span> Studio</div>
    </div>
