--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -1,3 +1,5 @@
+@import "../utils";
+
 #page-index {
   .navbar {
     box-shadow: 0 0 5px rgba(0, 0, 0, .1);
@@ -27,10 +29,6 @@
     margin: 50px 0;
   }
 
-  .member {
-    text-align: center;
-  }
-
   .works {
     text-align: center;
     padding-bottom: 30px;
@@ -57,13 +55,38 @@
       }
     }
   }
+
+  .services {
+    margin-top: 60px;
+    padding-bottom: 200px;
+    background-color: @main-color;
+    color: white;
+  }
+
+  .tech {
+    .tech-item {
+      height: 80px;
+      margin-left: 20px;
+
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+  }
+
+  .contact {
+    ul {
+      padding: 20px 0 0 50px;
+      list-style-type: square;
+
+      li {
+        margin-bottom: 5px;
+      }
+    }
+  }
 }
 
-.work.aod {
-}
 
-.work.lemaker {
-}
 
-.work.optico {
-}
+
+
