--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -28,27 +28,19 @@
       </div>
    </div>
 
-   <div class="work aod">
+   <div class="work">
       <div class="container clearfix">
-         <h1 class="title">AOD</h1>
+         <h1 class="title">Work 1</h1>
 
-         <img class="center-block" src="http://placehold.it/800x500" alt="">
+         <img class="center-block img-responsive" src="http://placehold.it/800x500" alt="">
       </div>
    </div>
 
-   <div class="work aod">
+   <div class="work">
       <div class="container clearfix">
-         <h1 class="title">LeMaker</h1>
+         <h1 class="title">Work 2</h1>
 
-         <img class="center-block" src="http://placehold.it/800x500" alt="">
-      </div>
-   </div>
-
-   <div class="work aod">
-      <div class="container clearfix">
-         <h1 class="title">Optico</h1>
-
-         <img class="center-block" src="http://placehold.it/800x500" alt="">
+         <img class="center-block img-responsive" src="http://placehold.it/800x500" alt="">
       </div>
    </div>
 
@@ -58,9 +50,54 @@
       </div>
    </div>
 
+   <div class="work">
+      <div class="container clearfix">
+         <h1 class="title">Work 3</h1>
+
+         <img class="center-block img-responsive" src="http://placehold.it/800x500" alt="">
+      </div>
+   </div>
+
+   <div class="work">
+      <div class="container clearfix">
+         <h1 class="title">Work 4</h1>
+
+         <img class="center-block img-responsive" src="http://placehold.it/800x500" alt="">
+      </div>
+   </div>
+
+   <div class="tech">
+      <div class="container">
+         <h1 class="title">Technologies we use</h1>
+
+         <div class="text-center">
+            <img class="tech-item" src="{{ static('image/python.png') }}" alt=""/>
+            <img class="tech-item" src="{{ static('image/python.png') }}" alt=""/>
+            <img class="tech-item" src="{{ static('image/python.png') }}" alt=""/>
+            <img class="tech-item" src="{{ static('image/python.png') }}" alt=""/>
+            <img class="tech-item" src="{{ static('image/python.png') }}" alt=""/>
+         </div>
+      </div>
+   </div>
+
    <div class="contact">
       <div class="container">
          <h1 class="title">Contact</h1>
+
+         <div class="row">
+            <div class="col-sm-7">
+               <img class="img-responsive" src="http://placehold.it/800x500" alt=""/>
+            </div>
+
+            <div class="col-sm-5">
+               <ul>
+                  <li>Address: Bowling Green, KY</li>
+                  <li>Email: hi@tuistudio.com</li>
+                  <li>Fax: TODO</li>
+                  <li>Tel: TODO</li>
+               </ul>
+            </div>
+         </div>
       </div>
    </div>
 
