update index page

--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -69,20 +69,20 @@
    <div class="container">
       <ul class="links-left list-unstyled list-inline">
          <li><a href="http://wiki.tuistudio.com" target="_blank">Wiki</a></li>
-         <li><a href="">Blog</a></li>
-         <li><a href="">Twitter</a></li>
+         <li><a>Blog</a></li>
+         <li><a>Twitter</a></li>
          <li><a href="https://github.com/tuistudio" target="_blank">Github</a></li>
-         <li><a href="">Collaboration</a></li>
-         <li><a href="">Jobs</a></li>
-         <li><a href="">Enterprise</a></li>
-         <li><a href="">Paterners</a></li>
+         <li><a>Collaboration</a></li>
+         <li><a>Jobs</a></li>
+         <li><a>Enterprise</a></li>
+         <li><a>Paterners</a></li>
       </ul>
 
       <img class="usa pull-right" src="{{ static('image/usa.png') }}" alt="USA"/>
 
       <ul class="links-right list-inline list-unstyled">
-         <li><a href="">Privacy</a></li>
-         <li><a href="">Legal</a></li>
+         <li><a>Privacy</a></li>
+         <li><a>Legal</a></li>
       </ul>
 
       <div class="cp">2014 © <span class="text-main">TUI</span> Studio</div>
