--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -72,8 +72,9 @@
   margin-left: 0;
 }
 #page-index .contact ul {
-  padding: 20px 0 0 50px;
+  padding: 30px 0 0 50px;
   list-style-type: square;
+  font-size: 16px;
 }
 #page-index .contact ul li {
   margin-bottom: 5px;
