--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -76,8 +76,9 @@
 
   .contact {
     ul {
-      padding: 20px 0 0 50px;
+      padding: 30px 0 0 50px;
       list-style-type: square;
+      font-size: 16px;
 
       li {
         margin-bottom: 5px;
