fix a scroll bug

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -28,7 +28,7 @@
    {#      </div>#}
    {#   </div>#}
 
-   <div class="work">
+   <div class="work work1">
       <div class="container clearfix">
          <h1 class="title">Work 1</h1>
 
